--- a/package.json
+++ b/package.json
@@ -25,18 +25,19 @@
   },
   "dependencies": {
     "ember-cli-babel": "^5.1.7",
+    "ember-cli-htmlbars": "^1.0.10",
     "webcamjs": "^1.0.16"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
+    "ember-browserify": "1.1.13",
     "ember-cli": "^2.9.0",
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-dependency-checker": "^1.3.0",
-    "ember-cli-htmlbars": "^1.0.10",
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-jshint": "^2.0.1",
-    "ember-cli-qunit": "^3.0.1",
+    "ember-cli-mocha": "0.10.4",
     "ember-cli-release": "^0.2.9",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
@@ -44,6 +45,7 @@
     "ember-disable-prototype-extensions": "^1.1.0",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
+    "ember-mocha": "0.9.1",
     "ember-resolver": "^2.0.3",
     "loader.js": "^4.0.10"
   },
