--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-jshint": "^2.0.1",
     "ember-cli-mocha": "0.10.4",
+    "ember-cli-page-object": "1.6.0",
     "ember-cli-release": "^0.2.9",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
