--- a/tests/.jshintrc
+++ b/tests/.jshintrc
@@ -6,12 +6,18 @@
     "setTimeout",
     "$",
     "-Promise",
+    "ok",
+    "expect",
+    "equal",
+    "module",
+    "test",
     "define",
     "console",
     "visit",
     "exists",
     "fillIn",
     "click",
+    "select",
     "keyEvent",
     "triggerEvent",
     "find",
@@ -26,7 +32,7 @@
   "node": false,
   "browser": false,
   "boss": true,
-  "curly": true,
+  "curly": false,
   "debug": false,
   "devel": false,
   "eqeqeq": true,
@@ -47,6 +53,6 @@
   "strict": false,
   "white": false,
   "eqnull": true,
-  "esversion": 6,
-  "unused": true
+  "esnext": true,
+  "expr": true
 }
