--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,15 @@ cache:
 env:
   # we recommend testing LTS's and latest stable release (bonus points to beta/canary)
   - EMBER_TRY_SCENARIO=ember-lts-2.4
+    COVERAGE=false
   - EMBER_TRY_SCENARIO=ember-lts-2.8
+    COVERAGE=false
   - EMBER_TRY_SCENARIO=ember-release
+    COVERAGE=true
   - EMBER_TRY_SCENARIO=ember-beta
+    COVERAGE=false
   - EMBER_TRY_SCENARIO=ember-canary
+    COVERAGE=false
 
 matrix:
   fast_finish: true
@@ -38,3 +43,6 @@ script:
   # Usually, it's ok to finish the test scenario without reverting
   #  to the addon's original dependency state, skipping "cleanup".
   - ember try:one $EMBER_TRY_SCENARIO test --skip-cleanup
+
+after_script:
+  - node_modules/.bin/codeclimate-test-reporter < coverage/lcov.info
