--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
+    "codeclimate-test-reporter": "^0.4.0",
     "ember-browserify": "1.1.13",
     "ember-cli": "^2.9.0",
     "ember-cli-app-version": "^2.0.0",
+    "ember-cli-code-coverage": "^0.3.7",
     "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-inject-live-reload": "^1.4.1",
