--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Ember addon for WebcamJS integration",
   "keywords": [
     "ember-addon",
-    "ember",
     "webcam",
     "webcamjs"
   ],
@@ -25,35 +24,35 @@
   },
   "dependencies": {
     "ember-cli-babel": "^5.1.7",
-    "ember-cli-htmlbars": "^1.0.10",
+    "ember-cli-htmlbars": "^1.1.1",
+    "ember-cli-node-assets": "^0.2.2",
     "webcamjs": "^1.0.16"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
-    "codeclimate-test-reporter": "^0.4.0",
-    "ember-browserify": "1.1.13",
-    "ember-cli": "^2.9.0",
-    "ember-cli-app-version": "^2.0.0",
-    "ember-cli-code-coverage": "^0.3.7",
+    "codeclimate-test-reporter": "^0.4.1",
+    "ember-cli": "2.12.0",
+    "ember-cli-chai": "^0.3.0",
+    "ember-cli-code-coverage": "^0.3.11",
     "ember-cli-dependency-checker": "^1.3.0",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.3",
+    "ember-cli-htmlbars-inline-precompile": "^0.3.6",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-jshint": "^2.0.1",
-    "ember-cli-mocha": "0.10.4",
+    "ember-cli-mocha": "^0.13.2",
     "ember-cli-page-object": "1.6.0",
     "ember-cli-release": "^0.2.9",
+    "ember-cli-shims": "^1.0.2",
     "ember-cli-sri": "^2.1.0",
-    "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-disable-prototype-extensions": "^1.1.0",
     "ember-export-application-global": "^1.0.5",
-    "ember-load-initializers": "^0.5.1",
-    "ember-mocha": "0.9.1",
+    "ember-load-initializers": "^0.6.0",
     "ember-resolver": "^2.0.3",
-    "loader.js": "^4.0.10"
+    "ember-source": "~2.12.0",
+    "loader.js": "^4.2.3"
   },
   "engines": {
-    "node": ">= 0.12.0"
+    "node": ">= 4"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
