Allow Flash fallback to be excluded through build configs
This commit adds two build config options:

  - `enableFlashFallback`: Exclude Flash callback from build if set
    to `false`. Default to `true`.

  - `flashFallbackDir`: The directory which the SWF file is placed
    inside the build. Default to `assets`.

Config access is done with `ember-get-config` addon which is added
to dependencies.

README file is updated to show the usage of the two new options.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-webcam",
   "version": "0.0.3",
-  "description": "Ember addon for WebcamJS integration",
+  "description": "An Ember wrapper for WebcamJS 1.x.",
   "keywords": [
     "ember-addon",
     "webcam",
@@ -26,6 +26,7 @@
     "ember-cli-babel": "^5.1.7",
     "ember-cli-htmlbars": "^1.1.1",
     "ember-cli-node-assets": "^0.2.2",
+    "ember-get-config": "^0.2.1",
     "webcamjs": "^1.0.16"
   },
   "devDependencies": {
