--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "webcamjs"
   ],
   "license": "MIT",
-  "author": "Lei Zhao <leizhao4@gmail.com>",
+  "author": "Chris Bonser <cbonser@gmail.com>",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/leizhao4/ember-webcam.git"
+    "url": "https://github.com/forge512/ember-webcam.git"
   },
   "scripts": {
     "build": "ember build",
