--- a/package.json
+++ b/package.json
@@ -2,11 +2,7 @@
   "name": "ember-webcam",
   "version": "0.0.8",
   "description": "An Ember wrapper for WebcamJS 1.x.",
-  "keywords": [
-    "ember-addon",
-    "webcam",
-    "webcamjs"
-  ],
+  "keywords": ["ember-addon", "webcam", "webcamjs"],
   "repository": {
     "type": "git",
     "url": "https://github.com/forge512/ember-webcam.git"
@@ -30,7 +26,7 @@
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-node-assets": "^0.2.2",
     "ember-cli-update": "^0.27.3",
-    "ember-get-config": "^0.2.1",
+    "ember-get-config": "^0.2.4",
     "webcamjs": "^1.0.16"
   },
   "devDependencies": {
